# awesome_generative_model

./: .env  .env.example  hello.py  pyproject.toml  requirements.txt
RAG/reasoning_rag/: reasoning_rag.ipynb
audio/: audio_to_transcript.py
ds/: compound_interest.ipynb
langchain/building_effective_agents_with_langgraph/: prompt_chaining.ipynb
langchain/design_patterns/: augmented_llm.ipynb
langchain/idea/: clean_text.md  clean_text.txt  llm_clean_text.md  text.md  text.txt  写作素材积累Agent.ipynb
langchain/langmem/: procedural_memory.ipynb  semantic_memory.ipynb
langchain/mcp/: math_server.py  mcp_with_langgraph.ipynb  weather_server.py
langchain/tutorial/: serve.py  基础_使用LCEL构建简单的LLM应用.ipynb  基础_构建一个聊天机器人.ipynb
openai_client/: chat_completion.py  chat_completion_FIM.py  chat_completion_JSON.py  chat_completion_vision.py  chatbot.py  embeddings.py  list_models.py  reason_response  speech_audio.py  tools.py  utils.py
openai_client/agent_design/: chain.py
openai_client/chat_completion/: chat_completion_function_call.py  chat_completion_multiround.py  chat_completion_prefix.py  chat_completion_reasoning.py  chat_completion_stream.py
