[project]
name = "awesome-generative-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.18",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.2",
    "mcp[cli]>=1.3.0",
    "pypdf>=5.3.0",
    "tavily-python>=0.5.1",
]
